--- a/Static_Websites/webpages/chat_page.html
+++ b/Static_Websites/webpages/chat_page.html
@@ -19,19 +19,19 @@
                 <p class="Reciever">Hi Varakumar, Iam good. How about you?</p>
             </div>
             <div>
-                <p class="sender">Iam fine. I published my website recently</p>
+                <p class="sender">Iam fine. I published my projects recently</p>
             </div>
             <div>
                 <p class="Reciever">Oh great Varakumar! Can you send me the URL?</p>
             </div>
             <div>
-                <p class="sender">https://varakumar.ccbp.tech</p>
+                <p class="sender">https://github.com/varakumar-123</p>
             </div>
             <div>
                 <p class="Reciever">Awesome Varakumar, Where did you learn?</p>
             </div>
             <div>
-                <p class="sender">NxtWave CCBP 4.0 Program</p>
+                <p class="sender">From my respected Teachers</p>
             </div>
         </div>
     </div>
